displayng new products

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-navigation></app-navigation>
 <nav id="sidebar" class="carrito-de-compras wrapper">
-
-
     <h2>Carrito de compras</h2>
     <p>Estos son los articulos que vas a comprar</p>
     <button class="btn-success" value="submit">Terminar Compra</button>
@@ -11,16 +9,16 @@
     <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 font-weight-normal">
             <img src="assets/img/logo.png" alt="logo garabato regalos">
-            <br> {{title}}</h1>
+            <br> {{title | uppercase}}</h1>
 
         <p class="lead font-weight-normal">
-            Queremos ayudarte a encontrar los detalles que te ayuden a crear tu propio espacio, nuestras alcancías no solo te ayudarna a ahorrar si no que son objetos decorativos en si misma que llenaran tu hogar de mucha personalidad..
+            Nuestras alcancías no solo te ayudaran a ahorrar si no que son objetos decorativos con mucha personalidad...
         </p>
     </div>
     <div class="product-device box-shadow d-none d-md-block"></div>
     <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
 </div>
-<section class="container real-content">
+<section class="container real-content e">
     <div class="text-center bg-black row justify-content-md-center">
         <div class="col-sm-12">
 
