--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -4,7 +4,7 @@
             <img src="assets/img/{{product.image}}" class="round" width="200px;" alt="" data-toggle="modal" data-target="#detailModal">
 
         </a>
-        <div class="product-icon"><img src="assets/img/{{product.icon}}" alt="" width="30px"></div>
+        <div class="product-icon" hidden><img src="assets/img/{{product.icon}}" alt="" width="30px"></div>
 
     </div>
 
@@ -17,7 +17,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="exampleModalLabel">{{selectedProduct.text}}</h4>
+                <!-- <h4 class="modal-title" id="exampleModalLabel">{{selectedProduct.text}}</h4>-->
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
@@ -25,21 +25,21 @@
             </div>
             <div class="modal-body row">
                 <div class="col-sm-8">
-                    <img src="./assets/img/{{selectedProduct.image}}" alt="" width="100%">
+                    <!--   <img src="./assets/img/{{selectedProduct.image}}" alt="" width="100%">-->
 
                 </div>
-                <div class="col-sm-4">
+                <!-- <div class="col-sm-4">
                     <h4 class="col-sm-4">${{selectedProduct.price}}</h4>
                     <p>{{selectedProduct.description}}</p>
 
-                </div>
+                </div>-->
 
             </div>
             <div class=" modal-footer ">
-                <span>total productos={{cart.length}}</span>
+                <!-- <span>total productos={{cart.length}}</span>
                 <button type="button " class="btn btn-primary " (click)="addToCart(selectedProduct)">Agregar a la lista de compras</button>
                 <button type="button" class="btn btn-secondary" onclick="$('#sidebar').toggleClass('active')" data-toggle="modal" data-target="#detailModal">Terminar Compra</button>
-
+               -->
             </div>
         </div>
     </div>
@@ -49,7 +49,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="exampleModalLabel">total productos=cantidad productos</h4>
+                <h4 class="modal-title" id="exampleModalLabel">Total productos= {{cart.length}}</h4>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
@@ -57,7 +57,7 @@
             </div>
             <div class="modal-body">
 
-                <!--   <div class="row" ng-repeat="compra in skull.cart track by $index">
+                <div class="row" *ngFor="let compra of cart">
 
                     <div class="col-sm-2">
                         <img src="{{compra.image}}" alt="" width="100%" class="rounded-circle">
@@ -72,12 +72,12 @@
                             <span class="badge badge-secondary">{{compra.price}} </span>
                         </h3>
                     </div>
-                </div>-->
+                </div>
 
 
             </div>
             <div class=" modal-footer ">
-                <button type="button" class="btn btn-primary" ng-click="skull.finalPurchase()">Terminar Compra</button>
+                <!--  <button type="button" class="btn btn-primary" ng-click="terminarCompra()">Terminar Compra</button> -->
             </div>
         </div>
     </div>
