with cpanel yml file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
     <div class="product-device box-shadow d-none d-md-block"></div>
     <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
 </div>
-<section class="container real-content e">
+<section class="container real-content ">
     <div class="text-center bg-black row justify-content-md-center">
         <div class="col-sm-12">
 
